--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-hello world.
-it is test page
-see my fltter web app
+앱개발 방과후 시간에 만들었습니다
+twitch.tv/vrecord_myui
+뮤이 방송 ㄱㄱ
 <br>
 <a href= "./pf"> 포트폴리오</a>
 </br>
