--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1>안녕하세요</h1>
-<h2>플루터 앱으로 만들어 보았습니다!</h2>
+<h2>플루터라는 언어로 만들어 보았습니다!</h2>
+<h5>조금 모자라더라도 귀엽게 봐주세요 ㅇ.< </h5>
 <br>
 <a href= "./pf"> 포트폴리오</a>
 </br>
