--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>안녕하세요</h1>
-<h2>플루터라는 언어로 만들어 보았습니다!</h2>
-<h5>조금 모자라더라도 귀엽게 봐주세요 >.< </h5>
+<h2>방과후 시간에 타이머, 다이스, 홈화면을 만들어 보았습니다</h2>
+<h5>플루터를 처음 배우니깐 귀엽게 봐주세요 >.< </h5>
 <br>
 <a href= "./pf"> 포트폴리오</a>
 </br>
