--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <img src="https://pbs.twimg.com/profile_images/983202191857958912/UDEdVG0T_400x400.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                               <h5>안녕하세요!</h5>
-                              <p>고양이 보고 가실래요? 다음페이지로 넘겨보세요!</p>
+                              <p>다음페이지로 넘겨보세요!</p>
                             </div>
                           </div>
                           <div class="carousel-item">
